--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    repositories {
+        google()
+    }
 }
 
 dependencies {
@@ -60,5 +63,6 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:2.24"
     compileOnly "org.glassfish:javax.annotation:3.1.1"
 
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    // Room
+    implementation "androidx.room:room-runtime:2.1.0"
 }
