--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,9 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-runtime:2.1.0"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+
+    // Lifecycle
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    kapt "android.arch.lifecycle:compiler:1.1.1"
 }
