--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,6 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:1.1.1"
 
     // Lifecycle
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha03'
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha03"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     kapt "android.arch.lifecycle:compiler:1.1.1"
 }
