--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.currencyRates.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -38,8 +38,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.currencyRates:runner:1.2.0'
+    androidTestImplementation 'androidx.currencyRates.espresso:espresso-core:3.2.0'
 
     // recyclerview
     implementation 'com.android.support:recyclerview-v7:28.0.0'
@@ -69,5 +69,7 @@ dependencies {
 
     // Lifecycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha03'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
     kapt "android.arch.lifecycle:compiler:1.1.1"
 }
