--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
     }
     repositories {
         google()
+        mavenCentral()
     }
 }
 
@@ -38,15 +39,11 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.currencyRates:runner:1.2.0'
-    androidTestImplementation 'androidx.currencyRates.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // recyclerview
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-
-    // butterknife
-    implementation 'com.jakewharton:butterknife:10.1.0'
-    kapt 'com.jakewharton:butterknife-compiler:10.1.0'
 
     // coroutines
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
@@ -72,4 +69,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha03'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
     kapt "android.arch.lifecycle:compiler:1.1.1"
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 }
