--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.currencyRates.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -28,6 +28,8 @@ android {
     }
     repositories {
         google()
+        jcenter()
+        maven { url "https://jitpack.io" }
         mavenCentral()
     }
 }
@@ -51,6 +53,10 @@ dependencies {
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+
+    // failed to resolve? - would use this to add api tests
+//    testImplementation 'com.squareup.okhttp3:mockwebserver:3.6.0'
+
     // gson convertor
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
 
