--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,6 @@ android {
     repositories {
         google()
         jcenter()
-        maven { url "https://jitpack.io" }
         mavenCentral()
     }
 }
@@ -78,6 +77,8 @@ dependencies {
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
+
+    // Snackbar
     implementation 'com.google.android.material:material:1.0.0'
 }
