--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@
 .idea/codeStyles/Project.xml
 .idea/encodings.xml
 .idea/misc.xml
+.idea/gradle.xml
+.idea/compiler.xml
+.idea/gradle.xml
+.idea/jarRepositories.xml
+.idea/misc.xml
