sigh fixed job name

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -1,10 +1,9 @@
 name: setup
 on: [push]
 jobs:
-  setup-and-build
-  build:
+  setup-and-build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
